--- a/0-/Google Summer of Code.mediawiki
+++ b/0-/Google Summer of Code.mediawiki
@@ -1,4 +1,5 @@
 There has been one try to apply for the Google Summer of Code:
 
+* [[Summer of Code 2006]] - 5 projects accepted
 * [[Summer of Code 2010]] - not accepted.
 * The deadline for applications to the Google Summer of Code 2011 is March 11th.
