http://www.google-melange.com/gsoc/program/list_projects/google/gsoc2010 search on org xmms2
Levitation import of page 2551 rev 9070.

--- a/0-/Google Summer of Code.mediawiki
+++ b/0-/Google Summer of Code.mediawiki
@@ -4,5 +4,5 @@ There has been one try to apply for the Google Summer of Code:
 * [[Summer of Code 2007]] - 4 projects accepted
 * [[Summer of Code 2008]] - 6 projects accepted
 * [[Summer of Code 2009]] - not accepted.
-* [[Summer of Code 2010]] - not accepted.
+* [[Summer of Code 2010]] - 4 projects accepted
 * The deadline for applications to the Google Summer of Code 2011 is March 11th.
