--- a/0-/GSoC:2010.mediawiki
+++ b/0-/GSoC:2010.mediawiki
@@ -1,6 +1,9 @@
 == Accepted projects ==
 
-None so far!
+* [http://www.google-melange.com/gsoc/student_project/show/google/gsoc2010/xmms2/t127230769916 Mergeable S4 with Coll 2.0]
+* [http://www.google-melange.com/gsoc/student_project/show/google/gsoc2010/xmms2/t127230769959 GIMME Interesting Music, Mr. Emacs!]
+* [http://www.google-melange.com/gsoc/student_project/show/google/gsoc2010/xmms2/t127230769984 Crossfade plugin & co for XMMS2]
+* [http://www.google-melange.com/gsoc/student_project/show/google/gsoc2010/xmms2/t127230770011 XMMS2 mobile web client for iPhone and Android devices]
 
 == Portal ==
 
