--- a/0-/Sitemap.mediawiki
+++ b/0-/Sitemap.mediawiki
@@ -19,6 +19,7 @@ __NOEDITSECTION__
 ;want to contribute something to the project..
 * check out the [[Developer Corner]] for information about [[Developer Corner#XMMS2_Technical_Details | technical details]], [[Developer Corner#Code.._and_bugs.21 | guidelines]] for working with XMMS2 code and various [[Developer Ideas|development ideas]].
 * if you're developing a client, maybe you'd like to add it to the [[XMMS2 Clients | clients]] page. You can also discover and add bits of wisdom to [[Writing XMMS2 Clients]].
+* If on the other hand you feel like there's already enough half-baked clients out there, why not look at the [[Clientlist]] and see what projects could use some contributions or a new maintainer.
 * if you want to develop a plugin, you should familiarise yourself with the [[Design of XMMS2]].
 * if you want to submit code that fixes a problem, or adds a feature, you should read up on our [[Developer Corner#Code.._and_bugs.21 | guidelines]] for working with XMMS2 code.
 * if you want to contribute to this wiki, check out the [[XMMS2:Wikitodo | to-do list]] and [[XMMS2:Wikiguidelines | guidelines]] for the wiki, or just edit what you can. Please note that this wiki does not allow anonymous edits, as we'd like to know who is changing what, and when, so please [[Special:Userlogin | register and log in]].
